--- a/app/views/v12/provider/view/3c-manage-applications-shared-multiple.html
+++ b/app/views/v12/provider/view/3c-manage-applications-shared-multiple.html
@@ -44,7 +44,7 @@ Manage vacancy
         <a href="6a-share-applications" class="govuk-link govuk-link--no-visited-state">Share applications with employer</a>
       </p>
       <p class="govuk-body">
-        <a href="#" class="govuk-link govuk-link--no-visited-state">Make multiple applications unsuccessful</a>
+        <a href="8a-multiple-unsuccessful" class="govuk-link govuk-link--no-visited-state">Make multiple applications unsuccessful</a>
       </p>
     </div>
   
