--- a/app/views/v12/provider/view/3c-manage-applications-unsuccessful-multiple.html
+++ b/app/views/v12/provider/view/3c-manage-applications-unsuccessful-multiple.html
@@ -23,9 +23,8 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Keith Stewart has had a job offer made
+          Applications have been made unsuccessful
         </h3>
-        <p><a href="#" class="govuk-link govuk-link--no-visited-state">Notify all other applicants </a>their applications are unsuccessful </p>
       </div>
     </div>
 
@@ -47,7 +46,7 @@ Manage vacancy
         <a href="6a-share-applications" class="govuk-link govuk-link--no-visited-state">Share applications with employer</a>
       </p>
       <p class="govuk-body">
-        <a href="#8a-multiple-unsuccessful" class="govuk-link govuk-link--no-visited-state">Make multiple applications unsuccessful</a>
+        <a href="8a-multiple-unsuccessful" class="govuk-link govuk-link--no-visited-state">Make multiple applications unsuccessful</a>
       </p>
     </div>
   
@@ -108,9 +107,9 @@ Manage vacancy
   {
     name: "Keith Stewart",
     id: "678CFR0",
-    status: "offer made",
-    link: "",
-    classes: "govuk-tag--green",
+    status: "employer reviewed",
+    link: "../account/application-employer-reviewed-yes",
+    classes: "govuk-tag--blue",
     date: "13 Oct 2022",
     disability: "Prefer not to say"
   },
@@ -253,7 +252,7 @@ Manage vacancy
       name: "Judy Ward",
       id: "897DW5T",
       status: "unsuccessful",
-      link: "../account/application-employer-reviewed-no",
+      link: "",
       classes: "govuk-tag--red",
       date: "15 Oct 2022",
       disability: "No"
