--- a/app/views/v12/provider/view/3c-manage-applications-unsuccessful.html
+++ b/app/views/v12/provider/view/3c-manage-applications-unsuccessful.html
@@ -46,7 +46,7 @@ Manage vacancy
         <a href="6a-share-applications" class="govuk-link govuk-link--no-visited-state">Share applications with employer</a>
       </p>
       <p class="govuk-body">
-        <a href="#" class="govuk-link govuk-link--no-visited-state">Make multiple applications unsuccessful</a>
+        <a href="8a-multiple-unsuccessful" class="govuk-link govuk-link--no-visited-state">Make multiple applications unsuccessful</a>
       </p>
     </div>
   
@@ -252,7 +252,7 @@ Manage vacancy
       name: "Judy Ward",
       id: "897DW5T",
       status: "unsuccessful",
-      link: "../account/application-employer-reviewed-no",
+      link: "",
       classes: "govuk-tag--red",
       date: "15 Oct 2022",
       disability: "No"
