--- a/app/views/v12/provider/account/application-employer-reviewed-yes.html
+++ b/app/views/v12/provider/account/application-employer-reviewed-yes.html
@@ -143,7 +143,6 @@ Manage apprentices
         <span>I don't have any interview support requirements</span>
 
       </p>
-      <br>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
 
@@ -151,9 +150,8 @@ Manage apprentices
     <section>
       <h2 class="govuk-heading-l">Employer response</h2>
 
-      <p>Yes, the employer wants to shortlist this applicant</p>
+      <p>Yes, the employer wants to shortlist this applicant.</p>
 
-      <br>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
 
