--- a/app/views/v12/provider/view/3a-live.html
+++ b/app/views/v12/provider/view/3a-live.html
@@ -192,7 +192,7 @@ Vacancies
           <tr class="govuk-table__row govuk-body-s">
             <td class="govuk-table__cell">Entry Level Development Engineer Apprentice</td>
               <td class="govuk-table__cell">Gloucestershire Health and Care NHS Foundation Trust</td>
-              <td class="govuk-table__cell"> - </td>
+              <td class="govuk-table__cell"> 20 </td>
               <td class="govuk-table__cell">01 Nov 2022</td>             
               <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
               <td class="govuk-table__cell"><a href="3b-manage-vacancy" class="govuk-link">Manage</a></td>   
@@ -201,7 +201,7 @@ Vacancies
           <tr class="govuk-table__row govuk-body-s">
             <td class="govuk-table__cell">Entry Level Development Engineer Apprentice</td>
               <td class="govuk-table__cell">FENDI LTD</td>
-              <td class="govuk-table__cell"> - </td>
+              <td class="govuk-table__cell"> 2 </td>
               <td class="govuk-table__cell">11 Nov 2022</td>             
               <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
               <td class="govuk-table__cell"><a href="#" class="govuk-link">Manage</a></td>   
