page format updated for 'are you sure' pages

--- a/app/views/v12/provider/view/3d-check-share.html
+++ b/app/views/v12/provider/view/3d-check-share.html
@@ -22,13 +22,16 @@ Manage vacancy
         <p class="govuk-body" >
           These applications will be shared anonymously with <b>Gloucestershire Health and Care NHS Foundation Trust</b> to view in their Apprenticeship service account:
         </p>
-        <ul class="govuk-list govuk-list--bullet">
 
+        <div style="background-color: #f3f2f1; padding: 15px;">
 
-                <!-- <li>No applicants selected</li> -->
-                <li>Keith Stewart: 678CFR0</li>
+          <ul class="govuk-list govuk-list--bullet">
 
-        </ul>
+                  <li>Keith Stewart: 678CFR0</li>
+
+          </ul>
+
+        </div>
 <!-- list END -->
 
 <br>
