--- a/app/views/v12/provider/view/6b-check-share.html
+++ b/app/views/v12/provider/view/6b-check-share.html
@@ -17,11 +17,14 @@ Manage vacancy
 
     <h1 class="govuk-heading-l">Do you want to share these applications?</h1>
 
-    
+
   <!-- list START       -->
         <p class="govuk-body" >
           These applications will be shared anonymously with <b>Gloucestershire Health and Care NHS Foundation Trust</b> to view in their Apprenticeship service account:
         </p>
+
+        <div style="background-color: #f3f2f1; padding: 15px;">
+
         <ul class="govuk-list govuk-list--bullet">
 
 
@@ -40,6 +43,8 @@ Manage vacancy
             {% endif %}
         </ul>
 <!-- list END -->
+
+</div>
 
 <br>
 
