--- a/app/views/v12/provider/view/8a-multiple-unsuccessful.html
+++ b/app/views/v12/provider/view/8a-multiple-unsuccessful.html
@@ -59,75 +59,66 @@ Manage vacancy
 
 {%
   set appsTableData = [
-    {
-      name: "Faizal Dawood",
-      id: "C5662EA",
-      status: "in review",
-      link: "../account/application-new",
-      classes: "govuk-tag--yellow",
-      date: "13 Oct 2022",
-      disability: "Prefer not to say"
-    },
-    {
-      name: "Keith Stewart",
-      id: "678CFR0",
-      status: "shared",
-      link: "",
-      classes: "govuk-tag--yellow",
-      date: "13 Oct 2022",
-      disability: "Prefer not to say"
-    },
-    {
-      name: "Cynthia Perez",
-      id: "FL13JK0",
-      status: "new",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "15 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Susie Noble",
-      id: "LL13J9H",
-      status: "In review",
-      link: "",
-      classes: "govuk-tag--yellow",
-      date: "15 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Judy Ward",
-      id: "897DW5T",
-      status: "in review",
-      link: "",
-      classes: "govuk-tag--yellow",
-      date: "15 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Charles Davis",
-      id: "B2LH789",
-      status: "in review",
-      link: "",
-      classes: "govuk-tag--yellow",
-      date: "15 Oct 2022",
-      disability: "Prefer not to say"
-    },
-    {
-      name: "Neena Patel",
-      id: "78BH067",
-      status: "in review",
-      link: "",
-      classes: "govuk-tag--yellow",
-      date: "15 Oct 2022",
-      disability: "No"
-    },
+  {
+    name: "Faizal Dawood",
+    id: "C5662EA",
+    status: "shared",
+    link: "",
+    classes: "govuk-tag--yellow",
+    date: "13 Oct 2022",
+    disability: "Prefer not to say"
+  },
+  {
+    name: "Keith Stewart",
+    id: "678CFR0",
+    status: "offer made",
+    link: "",
+    classes: "govuk-tag--green",
+    date: "13 Oct 2022",
+    disability: "Prefer not to say"
+  },
+  {
+    name: "Cynthia Perez",
+    id: "FL13JK0",
+    status: "in review",
+    link: "",
+    classes: "govuk-tag--yellow",
+    date: "15 Oct 2022",
+    disability: "No"
+  },
+  {
+    name: "Susie Noble",
+    id: "LL13J9H",
+    status: "shortlisted",
+    link: "",
+    classes: "govuk-tag--yellow",
+    date: "15 Oct 2022",
+    disability: "No"
+  },
+  {
+    name: "Charles Davis",
+    id: "B2LH789",
+    status: "employer reviewed",
+    link: "",
+    classes: "govuk-tag--blue",
+    date: "15 Oct 2022",
+    disability: "Prefer not to say"
+  },
+  {
+    name: "Neena Patel",
+    id: "78BH067",
+    status: "shared",
+    link: "",
+    classes: "govuk-tag--yellow",
+    date: "15 Oct 2022",
+    disability: "No"
+  },
     {
       name: "Jose Robinson",
       id: "LY6TY44",
-      status: "New",
+      status: "shared",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--yellow",
       date: "15 Oct 2022",
       disability: "Prefer not to say"
     },
@@ -219,6 +210,15 @@ Manage vacancy
       link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
+      disability: "No"
+    },
+    {
+      name: "Judy Ward",
+      id: "897DW5T",
+      status: "unsuccessful",
+      link: "../account/application-employer-reviewed-no",
+      classes: "govuk-tag--red",
+      date: "15 Oct 2022",
       disability: "No"
     },
     {
