--- a/app/views/v12/provider/view/8b-feedback-unsuccessful.html
+++ b/app/views/v12/provider/view/8b-feedback-unsuccessful.html
@@ -14,17 +14,22 @@ Manage vacancy
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-
-    <h1 class="govuk-heading-l"> Explain why these applications have been unsuccessful. Your comment will be sent to all the applicants you have selected.</h1>
-
-    
-        <textarea class="govuk-textarea" id="give-feedback" name="give-feedback" rows="10" spellcheck="false"></textarea>
-
 <form method="post" action="8c-check-multiple-unsuccessful">
 
- <button class="govuk-button" data-module="govuk-button">
-  Continue
-</button>
+    <h1 class="govuk-heading-l"> Give feedback to unsuccessful applicants</h1>
+
+    <p>
+      Your feedback will be sent to all applicants you have selected as unsuccessful.
+    </p>
+
+    <div class="govuk-form-group">
+        <textarea class="govuk-textarea" id="give-feedback" name="give-feedback" rows="5" spellcheck="false"></textarea>
+      </div>
+
+
+    <button class="govuk-button" data-module="govuk-button">
+      Continue
+    </button>
 
 </form>
 
