--- a/app/views/v12/provider/view/3c-manage-applications-shared.html
+++ b/app/views/v12/provider/view/3c-manage-applications-shared.html
@@ -22,7 +22,7 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Applications successfully shared with employer
+          Keith Stewart shared with employer
         </h3>
       </div>
     </div>
