--- a/app/views/v12/provider/view/3c-manage-applications-successful.html
+++ b/app/views/v12/provider/view/3c-manage-applications-successful.html
@@ -23,9 +23,8 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Keith Stewart has had a job offer made
+          Keith Stewart has been offered this job
         </h3>
-        <p><a href="#" class="govuk-link govuk-link--no-visited-state">Notify all other applicants </a>their applications are unsuccessful </p>
       </div>
     </div>
 
