--- a/app/views/v12/provider/view/3c-manage-applications-shortlist.html
+++ b/app/views/v12/provider/view/3c-manage-applications-shortlist.html
@@ -22,7 +22,7 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Application 678CFR0 has been shortlisted for the employer
+          Keith Stewart has been shortlisted for the employer
         </h3>
       </div>
     </div>
