--- a/app/views/v12/provider/view/3c-manage-applications-unsuccessful-multiple.html
+++ b/app/views/v12/provider/view/3c-manage-applications-unsuccessful-multiple.html
@@ -98,160 +98,160 @@ Manage vacancy
   {
     name: "Faizal Dawood",
     id: "C5662EA",
-    status: "shared",
+    status: "Unsuccessful",
     link: "",
-    classes: "govuk-tag--yellow",
+    classes: "govuk-tag--red",
     date: "13 Oct 2022",
     disability: "Prefer not to say"
   },
   {
     name: "Keith Stewart",
     id: "678CFR0",
-    status: "employer reviewed",
-    link: "../account/application-employer-reviewed-yes",
-    classes: "govuk-tag--blue",
+    status: "offer made",
+    link: "",
+    classes: "govuk-tag--green",
     date: "13 Oct 2022",
     disability: "Prefer not to say"
   },
   {
     name: "Cynthia Perez",
     id: "FL13JK0",
-    status: "in review",
+    status: "Unsuccessful",
     link: "",
-    classes: "govuk-tag--yellow",
+    classes: "govuk-tag--red",
     date: "15 Oct 2022",
     disability: "No"
   },
   {
     name: "Susie Noble",
     id: "LL13J9H",
-    status: "shortlisted",
+    status: "Unsuccessful",
     link: "",
-    classes: "govuk-tag--yellow",
+    classes: "govuk-tag--red",
     date: "15 Oct 2022",
     disability: "No"
   },
   {
     name: "Charles Davis",
     id: "B2LH789",
-    status: "employer reviewed",
+    status: "Unsuccessful",
     link: "",
-    classes: "govuk-tag--blue",
+    classes: "govuk-tag--red",
     date: "15 Oct 2022",
     disability: "Prefer not to say"
   },
   {
     name: "Neena Patel",
     id: "78BH067",
-    status: "shared",
+    status: "Unsuccessful",
     link: "",
-    classes: "govuk-tag--yellow",
+    classes: "govuk-tag--red",
     date: "15 Oct 2022",
     disability: "No"
   },
     {
       name: "Jose Robinson",
       id: "LY6TY44",
-      status: "shared",
+      status: "Unsuccessful",
       link: "",
-      classes: "govuk-tag--yellow",
+      classes: "govuk-tag--red",
       date: "15 Oct 2022",
       disability: "Prefer not to say"
     },
     {
       name: "John Smith",
       id: "39DBE1A",
-      status: "New",
+      status: "Unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "16 Oct 2022",
       disability: "Yes"
     },
     {
       name: "Danielle Price",
       id: "HAK9F56",
-      status: "New",
+      status: "Unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "16 Oct 2022",
       disability: "Yes"
     },
     {
       name: "Bryant Cantu",
       id: "5J9L5BF",
-      status: "New",
+      status: "Unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Loretta Giles",
       id: "3LN79HH",
-      status: "New",
+      status: "Unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Blake Peterson",
       id: "FL7J007",
-      status: "New",
+      status: "Unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Regina Carey",
       id: "98J98FG",
-      status: "New",
+      status: "Unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Millicent Thompson",
       id: "NJLP6GF",
-      status: "New",
+      status: "Unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Deena Lawson",
       id: "C78N0LK",
-      status: "New",
+      status: "Unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Garland Valenzuela",
       id: "45DL0HV",
-      status: "New",
+      status: "Unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Jerome Cross",
       id: "79ML444",
-      status: "New",
+      status: "Unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Judy Ward",
       id: "897DW5T",
-      status: "unsuccessful",
+      status: "Unsuccessful",
       link: "",
       classes: "govuk-tag--red",
       date: "15 Oct 2022",
