--- a/app/views/v12/provider/create/EXAMPLE.html
+++ b/app/views/v12/provider/create/EXAMPLE.html
@@ -14,7 +14,7 @@ Do you have any questions you would like to ask applicants? (optional) - Recruit
   <div class="govuk-grid-column-two-thirds">
     
 <!-- QA page -->
-    <h1 class="govuk-heading-l">Questions from the employer</h1>
+    <h1 class="govuk-heading-l">Additional questions</h1>
 
              <p><b>Question 1</b></p>
 
@@ -56,7 +56,7 @@ Do you have any questions you would like to ask applicants? (optional) - Recruit
 <!-- END QA page -->
 
 <!-- FAA application page -->
-<h1 class="govuk-heading-l">Questions from the employer</h1>
+<h1 class="govuk-heading-l">Additional questions</h1>
 
 
          <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="4000">
@@ -91,7 +91,7 @@ Do you have any questions you would like to ask applicants? (optional) - Recruit
        <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible govuk-!-margin-bottom-6">
 
 
-       <h1 class="govuk-heading-l">Additional questions</h1>
+       <h1 class="govuk-heading-l">Equality questions</h1>
 
        <Br><br><br>
 
@@ -100,7 +100,7 @@ Do you have any questions you would like to ask applicants? (optional) - Recruit
 <!-- FAA submitted application page -->
 <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible govuk-!-margin-bottom-6">
 
-<h1 class="govuk-heading-l">Questions from the employer</h1>
+<h1 class="govuk-heading-l">Additional questions</h1>
 
 <p><b>Why do you want to work for this employer?</b></p>
 
@@ -113,6 +113,8 @@ Do you have any questions you would like to ask applicants? (optional) - Recruit
 <p>[Answer......]</p>
 
 <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible govuk-!-margin-bottom-6">
+
+<h1 class="govuk-heading-l">Equality questions</h1>
 <!-- END FAA submitted application page -->
 
 <!-- Traineeship page -->
