--- a/app/views/v11/provider/account/application-failed.html
+++ b/app/views/v11/provider/account/application-failed.html
@@ -110,8 +110,9 @@ Manage apprentices
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+    <!-- EMPLOYER QUESTIONS -->
     <section>
-      <h2 class="govuk-heading-l">Questions from the employer</h2>
+      <h2 class="govuk-heading-l">Additional questions</h2>
 
       <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
       <p>[applicant answer]</p>
@@ -122,8 +123,10 @@ Manage apprentices
     </section>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+<!-- ADDITIONAL QUESTIONS -->
     <section>
-      <h2 class="govuk-heading-l">Additional questions</h2>
+      <h2 class="govuk-heading-l">Equality questions</h2>
 
       <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
       <p>No</p>
@@ -133,6 +136,7 @@ Manage apprentices
         <span>I don't have any interview support requirements</span>
 
       </p>
+
       <br>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
