--- a/app/views/v11/provider/account/application-new.html
+++ b/app/views/v11/provider/account/application-new.html
@@ -109,7 +109,7 @@ Manage apprentices
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
     <section>
-      <h2 class="govuk-heading-l">Questions from the employer</h2>
+      <h2 class="govuk-heading-l">Additional questions</h2>
 
       <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
       <p>[applicant answer]</p>
@@ -122,7 +122,7 @@ Manage apprentices
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
     <section>
-      <h2 class="govuk-heading-l">Additional questions</h2>
+      <h2 class="govuk-heading-l">Equality questions</h2>
 
       <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
       <p>No</p>
