--- a/app/views/v11/traineeships/account/application-failed.html
+++ b/app/views/v11/traineeships/account/application-failed.html
@@ -110,30 +110,34 @@ Manage apprentices
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-    <section>
-      <h2 class="govuk-heading-l">Questions from the employer</h2>
+   <!-- EMPLOYER QUESTIONS -->
+   <section>
+    <h2 class="govuk-heading-l">Additional questions</h2>
 
-      <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
-      <p>[applicant answer]</p>
+    <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
+    <p>[applicant answer]</p>
 
-      <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
-      <p>Yes</p>
+    <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
+    <p>Yes</p>
 
-    </section>
+  </section>
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-    
-    <section>
-      <h2 class="govuk-heading-l">Additional questions</h2>
+  <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-      <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
-      <p>No</p>
+<!-- ADDITIONAL QUESTIONS -->
+  <section>
+    <h2 class="govuk-heading-l">Equality questions</h2>
 
-      <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
-      <p>
-        <span>I don't have any interview support requirements</span>
+    <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
+    <p>No</p>
 
-      </p>
+    <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
+    <p>
+      <span>I don't have any interview support requirements</span>
+
+    </p>
+
+
       <br>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
