--- a/app/views/v12/employer/account/application-new.html
+++ b/app/views/v12/employer/account/application-new.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "ma-layout.html" %}
 
 
 {% block pageTitle %}
@@ -13,31 +13,25 @@ Manage apprentices
 {% endblock %}
 {% block content %}
 
-
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
-
     <section>
-      <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">
-        Keith Stewart
-      </h1>
+      <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">Rolo Tomasi</h1>
       <div class="govuk-!-margin-bottom-6">
-        <span class="govuk-!-font-weight-bold">Application ID: </span>678CFR0
+        <span class="govuk-!-font-weight-bold">Application ID: </span>1DAB217
       </div>
 
       <div class="panel panel-border-narrow">
         <p class="govuk-body">
-          Keith Stewart<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
+          Faizal Dawood<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
         </p>
         <p class="govuk-body">
           07812345678
-          <br> <a href="mailto:faizal.dawood@domainname.co.uk">keith.stewart@domainname.co.uk</a>
+          <br> <a href="mailto:faizal.dawood@domainname.co.uk">faizal.dawood@domainname.co.uk</a>
         </p>
       </div>
     </section>
 
-<!-- ABOUT YOU -->
     <section>
       <h2 class="govuk-heading-l">About you</h2>
 
@@ -57,7 +51,6 @@ Manage apprentices
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-<!-- EDUCATION -->
     <section>
       <h2 class="govuk-heading-l">Education</h2>
 
@@ -83,7 +76,6 @@ Manage apprentices
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-<!-- QUALIFICATIONS -->
     <section>
       <h2 class="govuk-heading-l">Qualifications</h2>
 
@@ -106,9 +98,10 @@ Manage apprentices
 
     </section>
 
-<!-- SKILLS -->
     <section>
       <h2 class="govuk-heading-l">Skills the Employer wants</h2>
+
+
 
       <p>
         Communication skills
@@ -118,201 +111,73 @@ Manage apprentices
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <!-- EMPLOYER QUESTIONS -->
-    <section>
-      <h2 class="govuk-heading-l">Questions from the employer</h2>
+<section>
+  <h2 class="govuk-heading-l">Additional questions</h2>
 
-      <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
-      <p>[applicant answer]</p>
+  <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
+  <p>[applicant answer]</p>
 
-      <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
-      <p>Yes</p>
+  <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
+  <p>Yes</p>
 
-    </section>
+</section>
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <!-- ADDITIONAL QUESTIONS -->
-    <section>
-      <h2 class="govuk-heading-l">Additional questions</h2>
+<section>
+  <h2 class="govuk-heading-l">Equality questions</h2>
 
-      <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
-      <p>No</p>
+  <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
+  <p>No</p>
 
-      <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
-      <p>
-        <span>I don't have any interview support requirements</span>
+  <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
+  <p>
+    <span>I don't have any interview support requirements</span>
 
-      </p>
-      <br>
+  </p>
+  <br>
+
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
 
-<!-- RADIO BUTTONS     -->
-<section>
-     
+    <section>
+      <h3 class="govuk-heading-l">Outcome</h3>
       <form method="post">
-   
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
-                What do you want to do with this application?
-              </h1>
-            </legend>
+        <div class="hide-print">
+                    <!-- Manage application method -->
+                    <div class="govuk-form-group">
+                          <div class="govuk-radios govuk-radios--conditional" data-module="radios">
+                            <div class="govuk-radios__item">
+                                <input class="govuk-radios__input" id="outcome-successful" name="outcome" type="radio" value="True">
+                                <label for="outcome-successful" class="govuk-label govuk-radios__label" >
+                                    Successful
+                                </label>
+                            </div>
 
-            <div class="govuk-radios" data-module="govuk-radios">
+                            <div class="govuk-radios__item" data-target="unsuccessful-reason" >
+                                <input id="govuk-radios__input" class="govuk-radios__input  " name="outcome" type="radio" value="False" data-aria-controls="unsuccessful-reason" aria-expanded="false">
+                                <label for="outcome-unsuccessful" class="govuk-label govuk-radios__label">
+                                    Unsuccessful
+                                </label>
+                            </div>
+                            <div id="unsuccessful-reason" class="govuk-radios__conditional">
+                                <div class="govuk-form-group">
+                                    <label class="govuk-label" for="reason">Feedback</label>
+                                    <span class="govuk-hint">Explain why the application has been unsucessful, your comments will be sent to the candidate.</span>
+                                    <textarea class="govuk-textarea" cols="50" rows="6"  id="reason" name="reason" size="12" type="text"></textarea>
+                                </div>
+                            </div>
+                          </div>
+                    </div>
 
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application_decision_in_review" name="application_decision" type="radio" value="in_review">
-                <label class="govuk-label govuk-radios__label" for="application_decision_in_review">
-                  Review 
-                </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="share">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-email">
-                  </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_in_review" name="application_decision" type="email" spellcheck="false">
-                </div>
-              </div>
 
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application_decision_share" name="application_decision" type="radio" value="share">
-                <label class="govuk-label govuk-radios__label" for="application_decision_share">
-                  Share with employer
-                </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="application_decision_share">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-email">
-                  </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_share" name="application_decision" type="email" spellcheck="false" autocomplete="email">
                 </div>
-              </div>
-              
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application_decision_shortlist" name="application_decision" type="radio" value="shortlisted">
-                <label class="govuk-label govuk-radios__label" for="application_decision_shortlist">
-                  Shortlist for employer 
-                </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="application_decision_shortlist">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-phone">
-                  </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_shortlist" name="aapplication_decision" type="tel" autocomplete="tel">
-                </div>
-              </div>
-
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application_decision_successful" name="application_decision" type="radio" value="successful">
-                <label class="govuk-label govuk-radios__label" for="application_decision_successful">
-                  Make job offer
-                </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="application_decision_successful">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-phone">
-                  </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_successful" name="application_decision" type="tel" autocomplete="tel">
-                </div>
-              </div>
-              
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application_decision_unsuccessful" name="application_decision" type="radio" value="unsuccessful" data-aria-controls="application_unsuccessful">
-                <label class="govuk-label govuk-radios__label" for="application_decision_unsuccessful">
-                  Make unsuccessful
-                </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="application_unsuccessful">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-text">
-                    <b>Feedback</b>
-                  </label>
-                  <div id="sign-in-hint" class="govuk-hint">
-                    Explain why the application has been unsuccessful, your comments will be sent to the applicant.
-                  </div>
-                  <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
-                  <!-- <input class="govuk-input govuk-!-width-two-thirds" id="application_decision_unsuccessful" name="application_decision_unsuccessful" type="tel" autocomplete="tel"> -->
-                </div>
-        
-              </div>
-            </div>
-        
-          </fieldset>
-        </div>
-
-<!-- ///////// testing radios -->
-
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
-                How would you prefer to be contacted?
-              </h1>
-            </legend>
-
-            <div class="govuk-radios" data-module="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application" name="application" type="radio" value="review" data-aria-controls="conditional-contact">
-                <label class="govuk-label govuk-radios__label" for="application">
-                  Review
-                </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-email">
-                    Email address
-                  </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false" autocomplete="email">
-                </div>
-              </div>
-              
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application-2" name="application" type="radio" value="share">
-                <label class="govuk-label govuk-radios__label" for="application-2">
-                  Phone
-                </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-2">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-phone">
-                    Phone number
-                  </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-phone" name="contact-by-phone" type="tel" autocomplete="tel">
-                </div>
-              </div>
-
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application-3" name="application" type="radio" value="shortlist" data-aria-controls="conditional-contact-3">
-                <label class="govuk-label govuk-radios__label" for="application-3">
-                  Text message
-                </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-3">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-text">
-                    Mobile phone number
-                  </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-text" name="contact-by-text" type="tel" autocomplete="tel">
-                </div>
-        
-              </div>
-            </div>
-        
-          </fieldset>
-        </div>
-              
-<!-- BUTTONS -->
-      <div class="govuk-button-group">
-        <button class="govuk-button" data-module="govuk-button">
-          Save
-        </button>
-      
-        <a class="govuk-link" href="#">Cancel</a>
+      </form>
+      <div class="form-group hide-print">
+          <a href="manage-vacancy" class="govuk-button">Save</a>
+          <a href="manage-vacancy" class="govuk-link">Cancel</a>
       </div>
-      
-    </form>
 
 
 
