--- a/app/views/v12/employer/account/application-succesful.html
+++ b/app/views/v12/employer/account/application-succesful.html
@@ -109,31 +109,33 @@ Manage apprentices
     </section>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+<!-- EMPLOYER QUESTIONS -->
+<section>
+  <h2 class="govuk-heading-l">Additional questions</h2>
 
-    <section>
-      <h2 class="govuk-heading-l">Questions from the employer</h2>
+  <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
+  <p>[applicant answer]</p>
 
-      <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
-      <p>[applicant answer]</p>
+  <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
+  <p>Yes</p>
 
-      <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
-      <p>Yes</p>
+</section>
 
-    </section>
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+<!-- ADDITIONAL QUESTIONS -->
+<section>
+  <h2 class="govuk-heading-l">Equality questions</h2>
 
-    <section>
-      <h2 class="govuk-heading-l">Additional questions</h2>
+  <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
+  <p>No</p>
 
-      <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
-      <p>No</p>
+  <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
+  <p>
+    <span>I don't have any interview support requirements</span>
 
-      <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
-      <p>
-        <span>I don't have any interview support requirements</span>
+  </p>
 
-      </p>
       <br>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
