--- a/app/views/v12/provider/account/application-employer-reviewed-no.html
+++ b/app/views/v12/provider/account/application-employer-reviewed-no.html
@@ -118,34 +118,36 @@ Manage apprentices
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <!-- EMPLOYER QUESTIONS -->
-    <section>
-      <h2 class="govuk-heading-l">Questions from the employer</h2>
+<section>
+  <h2 class="govuk-heading-l">Additional questions</h2>
 
-      <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
-      <p>[applicant answer]</p>
+  <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
+  <p>[applicant answer]</p>
 
-      <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
-      <p>Yes</p>
+  <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
+  <p>Yes</p>
 
-    </section>
+</section>
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <!-- ADDITIONAL QUESTIONS -->
-    <section>
-      <h2 class="govuk-heading-l">Additional questions</h2>
+<section>
+  <h2 class="govuk-heading-l">Equality questions</h2>
 
-      <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
-      <p>No</p>
+  <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
+  <p>No</p>
 
-      <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
-      <p>
-        <span>I don't have any interview support requirements</span>
+  <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
+  <p>
+    <span>I don't have any interview support requirements</span>
 
-      </p>
+  </p>
+  <br>
+  <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+</section>
       
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-    </section>
+
 
 <!-- EMPLOYER RESPONSE -->
     <section>
@@ -207,16 +209,18 @@ Manage apprentices
                   Make unsuccessful
                 </label>
               </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-5">
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden govuk-character-count" id="conditional-contact-5" data-module="govuk-character-count" data-maxwords="200">
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="contact-by-unsuccessful">
-                    Feedback
+                    <b>Feedback</b>
                   </label>
                   <div id="sign-in-hint" class="govuk-hint">
                     Explain why the application has been unsuccessful, your comments will be sent to the applicant.
                   </div>
                   <textarea class="govuk-textarea" id="contact-by-unsuccessful" name="contact-by-unsuccessful" type="unsuccessful" rows="5" spellcheck="false" aria-describedby="more-detail-hint"></textarea>
-                
+                </div>
+                <div id="word-count-info" class="govuk-hint govuk-character-count__message">
+                  You can enter up to 200 words
                 </div>
               </div>
 
