--- a/app/views/v12/provider/account/application-failed.html
+++ b/app/views/v12/provider/account/application-failed.html
@@ -122,20 +122,36 @@ Manage apprentices
     </section>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-    <section>
-      <h2 class="govuk-heading-l">Additional questions</h2>
+   <!-- EMPLOYER QUESTIONS -->
+   <section>
+    <h2 class="govuk-heading-l">Additional questions</h2>
 
-      <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
-      <p>No</p>
+    <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
+    <p>[applicant answer]</p>
 
-      <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
-      <p>
-        <span>I don't have any interview support requirements</span>
+    <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
+    <p>Yes</p>
 
-      </p>
-      <br>
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-    </section>
+  </section>
+
+  <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+<!-- ADDITIONAL QUESTIONS -->
+  <section>
+    <h2 class="govuk-heading-l">Equality questions</h2>
+
+    <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
+    <p>No</p>
+
+    <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
+    <p>
+      <span>I don't have any interview support requirements</span>
+
+    </p>
+    <br>
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+  </section>
+
 
     <section>
       <h3 class="govuk-heading-l">Outcome</h3>
